<?xml version="1.0"?>
<package format="2">
  <name>aubo_robot_driver</name>
  <version>0.0.1</version>
  <description>A ROS package for controlling AUBO robots with a RoboDK interface</description>

  <!-- 作者和维护者信息 -->
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <!-- 编译和运行时依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 可选标签 -->
  <export>
  </export>
</package>

